--- a/frontend/src/css/admin/task_create.css
+++ b/frontend/src/css/admin/task_create.css
@@ -578,12 +578,8 @@ video {
   left: 50%;
 }
 
-.left-3 {
-  left: 0.75rem;
-}
-
-.left-3\.5 {
-  left: 0.875rem;
+.left-16 {
+  left: 4rem;
 }
 
 .left-4 {
@@ -592,6 +588,10 @@ video {
 
 .left-5 {
   left: 1.25rem;
+}
+
+.left-8 {
+  left: 2rem;
 }
 
 .right-3 {
@@ -606,14 +606,6 @@ video {
   top: 2.5rem;
 }
 
-.top-14 {
-  top: 3.5rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
 .top-5 {
   top: 1.25rem;
 }
@@ -626,36 +618,44 @@ video {
   top: 1.75rem;
 }
 
-.right-5 {
-  right: 1.25rem;
+.top-6 {
+  top: 1.5rem;
 }
 
-.left-8 {
-  left: 2rem;
+.top-9 {
+  top: 2.25rem;
 }
 
-.left-10 {
-  left: 2.5rem;
+.right-9 {
+  right: 2.25rem;
 }
 
-.left-1 {
-  left: 0.25rem;
+.right-4 {
+  right: 1rem;
 }
 
-.left-16 {
-  left: 4rem;
+.right-40 {
+  right: 10rem;
 }
 
-.left-6 {
-  left: 1.5rem;
+.right-52 {
+  right: 13rem;
 }
 
-.left-7 {
-  left: 1.75rem;
+.right-8 {
+  right: 2rem;
 }
 
-.left-20 {
-  left: 5rem;
+.right-12 {
+  right: 3rem;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.right-20 {
+  right: 5rem;
 }
 
 .z-50 {
@@ -677,11 +677,6 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
 }
 
 .mb-1 {
@@ -772,10 +767,6 @@ video {
   margin-right: 5rem;
 }
 
-.mr-3 {
-  margin-right: 0.75rem;
-}
-
 .mr-4 {
   margin-right: 1rem;
 }
@@ -818,6 +809,10 @@ video {
 
 .mt-24 {
   margin-top: 6rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
 }
 
 .mt-32 {
@@ -868,14 +863,6 @@ video {
   margin-top: 24rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-28 {
-  margin-top: 7rem;
-}
-
 .box-border {
   box-sizing: border-box;
 }
@@ -912,14 +899,6 @@ video {
   height: 3.5rem;
 }
 
-.h-16 {
-  height: 4rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
 .h-2\/6 {
   height: 33.333333%;
 }
@@ -930,10 +909,6 @@ video {
 
 .h-24 {
   height: 6rem;
-}
-
-.h-28 {
-  height: 7rem;
 }
 
 .h-3\/6 {
@@ -988,24 +963,8 @@ video {
   height: 100vh;
 }
 
-.h-60 {
-  height: 15rem;
-}
-
-.h-52 {
-  height: 13rem;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-80 {
-  height: 20rem;
-}
-
-.h-7 {
-  height: 1.75rem;
+.h-2 {
+  height: 0.5rem;
 }
 
 .w-10 {
@@ -1026,10 +985,6 @@ video {
 
 .w-24 {
   width: 6rem;
-}
-
-.w-32 {
-  width: 8rem;
 }
 
 .w-36 {
@@ -1060,10 +1015,6 @@ video {
   width: 18rem;
 }
 
-.w-8 {
-  width: 2rem;
-}
-
 .w-8\/12 {
   width: 66.666667%;
 }
@@ -1084,28 +1035,28 @@ video {
   width: 100%;
 }
 
-.w-1\/4 {
-  width: 25%;
+.w-8 {
+  width: 2rem;
 }
 
-.w-1 {
-  width: 0.25rem;
+.w-80 {
+  width: 20rem;
 }
 
-.w-12 {
-  width: 3rem;
+.w-7\/12 {
+  width: 58.333333%;
 }
 
 .flex-none {
   flex: none;
 }
 
-.flex-shrink-0 {
-  flex-shrink: 0;
-}
-
 .flex-grow {
   flex-grow: 1;
+}
+
+.border-collapse {
+  border-collapse: collapse;
 }
 
 .-translate-x-1\/2 {
@@ -1115,14 +1066,6 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.resize {
-  resize: both;
-}
-
-.flex-row {
-  flex-direction: row;
 }
 
 .flex-col {
@@ -1149,16 +1092,16 @@ video {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
 
 .overflow-scroll {
   overflow: scroll;
-}
-
-.overflow-x-scroll {
-  overflow-x: scroll;
 }
 
 .overflow-y-scroll {
@@ -1209,10 +1152,6 @@ video {
   border-width: 4px;
 }
 
-.border-none {
-  border-style: none;
-}
-
 .border-orange-100 {
   --tw-border-opacity: 1;
   border-color: rgb(255 237 213 / var(--tw-border-opacity));
@@ -1228,14 +1167,9 @@ video {
   border-color: rgb(255 247 237 / var(--tw-border-opacity));
 }
 
-.border-orange-500 {
+.border-l-orange-50 {
   --tw-border-opacity: 1;
-  border-color: rgb(249 115 22 / var(--tw-border-opacity));
-}
-
-.border-l-orange-200 {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(254 215 170 / var(--tw-border-opacity));
+  border-left-color: rgb(255 247 237 / var(--tw-border-opacity));
 }
 
 .bg-amber-100 {
@@ -1278,11 +1212,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1290,11 +1219,6 @@ video {
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .p-0 {
@@ -1381,6 +1305,10 @@ video {
   padding-left: 3rem;
 }
 
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
 .pl-8 {
   padding-left: 2rem;
 }
@@ -1401,16 +1329,12 @@ video {
   padding-top: 3rem;
 }
 
-.pt-24 {
-  padding-top: 6rem;
-}
-
-.pl-6 {
-  padding-left: 1.5rem;
-}
-
 .pt-16 {
   padding-top: 4rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .text-left {
@@ -1467,11 +1391,6 @@ video {
 .text-9xl {
   font-size: 8rem;
   line-height: 1;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .font-bold {
