--- a/frontend/src/css/user/point_mgmt.css
+++ b/frontend/src/css/user/point_mgmt.css
@@ -827,6 +827,14 @@ video {
   margin-top: 24rem;
 }
 
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
+.mb-80 {
+  margin-bottom: 20rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -861,6 +869,10 @@ video {
 
 .h-14 {
   height: 3.5rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-2\/6 {
@@ -927,8 +939,58 @@ video {
   height: 100vh;
 }
 
-.h-16 {
-  height: 4rem;
+.h-8 {
+  height: 2rem;
+}
+
+.h-80 {
+  height: 20rem;
+}
+
+.h-9 {
+  height: 2.25rem;
+}
+
+.max-h-screen {
+  max-height: 100vh;
+}
+
+.min-h-dvh {
+  min-height: 100dvh;
+}
+
+.min-h-screen {
+  min-height: 100vh;
+}
+
+.min-h-fit {
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+}
+
+.min-h-max {
+  min-height: -moz-max-content;
+  min-height: max-content;
+}
+
+.min-h-lvh {
+  min-height: 100lvh;
+}
+
+.min-h-svh {
+  min-height: 100svh;
+}
+
+.min-h-px {
+  min-height: 1px;
+}
+
+.min-h-3 {
+  min-height: 0.75rem;
+}
+
+.min-h-3\.5 {
+  min-height: 0.875rem;
 }
 
 .w-10 {
@@ -1011,6 +1073,10 @@ video {
   flex-grow: 1;
 }
 
+.flex-grow-0 {
+  flex-grow: 0;
+}
+
 .border-collapse {
   border-collapse: collapse;
 }
@@ -1086,12 +1152,12 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .rounded-b-lg {
@@ -1127,9 +1193,29 @@ video {
   border-color: rgb(255 247 237 / var(--tw-border-opacity));
 }
 
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-orange-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(253 186 116 / var(--tw-border-opacity));
+}
+
+.border-orange-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(249 115 22 / var(--tw-border-opacity));
+}
+
 .border-l-orange-50 {
   --tw-border-opacity: 1;
   border-left-color: rgb(255 247 237 / var(--tw-border-opacity));
+}
+
+.border-l-white {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-amber-100 {
@@ -1140,6 +1226,10 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-main-color {
+  background-color: rgba(246, 219, 186, 0.5);
 }
 
 .bg-orange-100 {
@@ -1167,6 +1257,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-sub-color {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 247, 237, var(--tw-bg-opacity));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1178,10 +1273,6 @@ video {
 
 .p-0 {
   padding: 0px;
-}
-
-.p-4 {
-  padding: 1rem;
 }
 
 .px-12 {
@@ -1296,8 +1387,8 @@ video {
   padding-top: 6rem;
 }
 
-.pt-6 {
-  padding-top: 1.5rem;
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
 .text-left {
@@ -1308,12 +1399,8 @@ video {
   text-align: center;
 }
 
-.font-kiwi-maru {
+.font-coment {
   font-family: "Kiwi Maru", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-.font-yusei-magic {
-  font-family: "Yusei Magic", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-2xl {
@@ -1354,6 +1441,11 @@ video {
 .text-9xl {
   font-size: 8rem;
   line-height: 1;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1405,6 +1497,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-main-font-color {
+  --tw-text-opacity: 1;
+  color: rgb(74 180 161 / var(--tw-text-opacity));
 }
 
 .outline {
