--- a/frontend/src/css/user/point_mgmt.css
+++ b/frontend/src/css/user/point_mgmt.css
@@ -647,10 +647,6 @@ video {
   margin-bottom: 0.25rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
 .mb-12 {
   margin-bottom: 3rem;
 }
@@ -661,6 +657,10 @@ video {
 
 .mb-16 {
   margin-bottom: 4rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
 .mb-24 {
@@ -827,14 +827,6 @@ video {
   margin-top: 24rem;
 }
 
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
-.mb-80 {
-  margin-bottom: 20rem;
-}
-
 .box-border {
   box-sizing: border-box;
 }
@@ -911,10 +903,6 @@ video {
   height: 11rem;
 }
 
-.h-5\/6 {
-  height: 83.333333%;
-}
-
 .h-56 {
   height: 14rem;
 }
@@ -939,58 +927,12 @@ video {
   height: 100vh;
 }
 
-.h-8 {
-  height: 2rem;
+.h-\[50vh\] {
+  height: 50vh;
 }
 
-.h-80 {
-  height: 20rem;
-}
-
-.h-9 {
-  height: 2.25rem;
-}
-
-.max-h-screen {
-  max-height: 100vh;
-}
-
-.min-h-dvh {
-  min-height: 100dvh;
-}
-
-.min-h-screen {
-  min-height: 100vh;
-}
-
-.min-h-fit {
-  min-height: -moz-fit-content;
-  min-height: fit-content;
-}
-
-.min-h-max {
-  min-height: -moz-max-content;
-  min-height: max-content;
-}
-
-.min-h-lvh {
-  min-height: 100lvh;
-}
-
-.min-h-svh {
-  min-height: 100svh;
-}
-
-.min-h-px {
-  min-height: 1px;
-}
-
-.min-h-3 {
-  min-height: 0.75rem;
-}
-
-.min-h-3\.5 {
-  min-height: 0.875rem;
+.h-\[50dvh\] {
+  height: 50dvh;
 }
 
 .w-10 {
@@ -1071,10 +1013,6 @@ video {
 
 .flex-grow {
   flex-grow: 1;
-}
-
-.flex-grow-0 {
-  flex-grow: 0;
 }
 
 .border-collapse {
@@ -1198,26 +1136,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-orange-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(253 186 116 / var(--tw-border-opacity));
-}
-
-.border-orange-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(249 115 22 / var(--tw-border-opacity));
-}
-
-.border-l-orange-50 {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(255 247 237 / var(--tw-border-opacity));
-}
-
-.border-l-white {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
 .bg-amber-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 243 199 / var(--tw-bg-opacity));
@@ -1252,14 +1170,14 @@ video {
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-sub-color {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 247, 237, var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -1387,10 +1305,6 @@ video {
   padding-top: 6rem;
 }
 
-.pb-12 {
-  padding-bottom: 3rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1443,11 +1357,6 @@ video {
   line-height: 1;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1474,6 +1383,11 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
+.text-main-font-color {
+  --tw-text-opacity: 1;
+  color: rgb(74 180 161 / var(--tw-text-opacity));
+}
+
 .text-orange-500 {
   --tw-text-opacity: 1;
   color: rgb(249 115 22 / var(--tw-text-opacity));
@@ -1497,11 +1411,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-main-font-color {
-  --tw-text-opacity: 1;
-  color: rgb(74 180 161 / var(--tw-text-opacity));
 }
 
 .outline {
