--- a/frontend/src/css/user/tasks/task_list.css
+++ b/frontend/src/css/user/tasks/task_list.css
@@ -594,6 +594,10 @@ video {
   left: 2rem;
 }
 
+.right-20 {
+  right: 5rem;
+}
+
 .right-3 {
   right: 0.75rem;
 }
@@ -612,6 +616,10 @@ video {
 
 .top-8 {
   top: 2rem;
+}
+
+.top-9 {
+  top: 2.25rem;
 }
 
 .z-50 {
@@ -639,10 +647,6 @@ video {
   margin-bottom: 0.25rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
 .mb-12 {
   margin-bottom: 3rem;
 }
@@ -653,6 +657,10 @@ video {
 
 .mb-16 {
   margin-bottom: 4rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
 .mb-24 {
@@ -855,6 +863,10 @@ video {
   height: 3.5rem;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .h-2\/6 {
   height: 33.333333%;
 }
@@ -891,10 +903,6 @@ video {
   height: 11rem;
 }
 
-.h-5\/6 {
-  height: 83.333333%;
-}
-
 .h-56 {
   height: 14rem;
 }
@@ -907,6 +915,10 @@ video {
   height: 24rem;
 }
 
+.h-\[50dvh\] {
+  height: 50dvh;
+}
+
 .h-auto {
   height: auto;
 }
@@ -917,10 +929,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.w-1\/4 {
-  width: 25%;
 }
 
 .w-10 {
@@ -967,6 +975,10 @@ video {
   width: 50%;
 }
 
+.w-7\/12 {
+  width: 58.333333%;
+}
+
 .w-72 {
   width: 18rem;
 }
@@ -995,10 +1007,6 @@ video {
   flex: none;
 }
 
-.flex-shrink-0 {
-  flex-shrink: 0;
-}
-
 .flex-grow {
   flex-grow: 1;
 }
@@ -1014,10 +1022,6 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.flex-row {
-  flex-direction: row;
 }
 
 .flex-col {
@@ -1056,10 +1060,6 @@ video {
   overflow: scroll;
 }
 
-.overflow-x-scroll {
-  overflow-x: scroll;
-}
-
 .overflow-y-scroll {
   overflow-y: scroll;
 }
@@ -1084,6 +1084,10 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-xl {
@@ -1123,9 +1127,9 @@ video {
   border-color: rgb(255 247 237 / var(--tw-border-opacity));
 }
 
-.border-l-orange-200 {
+.border-white {
   --tw-border-opacity: 1;
-  border-left-color: rgb(254 215 170 / var(--tw-border-opacity));
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-amber-100 {
@@ -1138,14 +1142,13 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-main-color {
+  background-color: rgba(246, 219, 186, 0.5);
+}
+
 .bg-orange-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 237 213 / var(--tw-bg-opacity));
-}
-
-.bg-orange-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
 }
 
 .bg-orange-300 {
@@ -1161,6 +1164,11 @@ video {
 .bg-red-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.bg-sub-color {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 247, 237, var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1301,11 +1309,11 @@ video {
   text-align: center;
 }
 
-.font-kiwi-maru {
+.font-coment {
   font-family: "Kiwi Maru", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.font-yusei-magic {
+.font-title {
   font-family: "Yusei Magic", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
@@ -1375,9 +1383,9 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
-.text-orange-400 {
+.text-main-font-color {
   --tw-text-opacity: 1;
-  color: rgb(251 146 60 / var(--tw-text-opacity));
+  color: rgb(74 180 161 / var(--tw-text-opacity));
 }
 
 .text-orange-500 {
@@ -1441,9 +1449,4 @@ video {
 .hover\:text-orange-300:hover {
   --tw-text-opacity: 1;
   color: rgb(253 186 116 / var(--tw-text-opacity));
-}
-
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
